# Lucid-L2

./: .clineignore  .clinerules  .dockerignore  .gitignore  .npmrc  AI-AGENT-API-GUIDE.md  Anchor.toml  CLAUDE.md  CLEAN-STRUCTURE-GUIDE.md  CLOUD-SUPABASE-MIGRATION-COMPLETE.md  CONTRIBUTING.md  CREWAI-INTEGRATION-GUIDE.md  CRITICAL-SCHEMA-MISMATCH-FIX.md  DEPLOYMENT-AND-TESTING-PLAN.md  DEVELOPMENT-STATUS-REPORT.md  DEVNET-OPTIMIZATION-PLAN.md  DEVNET-VERIFICATION-REPORT.md  DUAL-GAS-GUIDE.md  Dockerfile  Dockerfile.worker-gpu-vllm  FC.md  FINAL-MVP-STATUS.md  FLUID-COMPUTE-V0-ACCEPTANCE-CHECKLIST.md  FLUID-COMPUTE-V0-CTO-ACCEPTANCE-CHECKLIST.md  FRONTEND-NANGO-MULTIACCOUNT-INTEGRATION.md  GAS-UTILS-CPI-IMPLEMENTATION.md  HF-PASSPORT-SYNC-GUIDE.md  HONEST-TESTING-STATUS.md  HOW-TO-TEST-ONCHAIN.md  HYPERLIQUID-N8N-INTEGRATION-GUIDE.md  LICENSE  LLM-PROXY-INTEGRATION-GUIDE.md  N8N-API-KEY-SETUP.md  N8N-INTEGRATION-GUIDE.md  N8N-LUCID-INTEGRATION-OVERVIEW.md  N8N-PHASE-3-AGENT-SERVICES.md  N8N-PHASE-3.2-COMPLETE.md  N8N-PHASE-3.2-DAY1-COMPLETE.md  N8N-PHASE-3.2-DAY3-COMPLETE.md  N8N-PHASE-3.2-DAY4-COMPLETE.md  (+64 more)
auth-frontend/: index.html  lucid_front  lucid_front.pub  package.json
browser-extension/: CHROME-STORE-SUBMISSION-GUIDE.md  CSS_ISOLATION_IMPLEMENTATION.md  DISCONNECT-BUTTON-IMPLEMENTATION.md  DISTRIBUTION-GUIDE.md  FINAL-FIX-INSTRUCTIONS.md  FINAL-SYNC-FIX.md  FOR-GROK-COMPLETE-CONTEXT.md  PHANTOM-SUPPORT-GUIDE.md  PHANTOM-URL-RESTRICTION-FIX.md  PHASE-2-REFACTORING-COMPLETE.md  PIN-UNPIN-FIX.md  PRIVY-DASHBOARD-SETUP.md  PRIVY-FIXES-COMPLETE.md  PRIVY-INTEGRATION-FIX.md  PRIVY-PHANTOM-FIX-COMPLETE.md  PRIVY-POPUP-INTEGRATION-GUIDE.md  PRIVY-SSL-FIX-COMPLETE.md  QUICK-FIX-GUIDE.md  QUICK-START-NEW-UI.md  README.md  REFACTORING-SUMMARY.md  RELOAD-EXTENSION-INSTRUCTIONS.md  SIDEBAR-POPUP-SYNC-FIX.md  SOLANA-DISCONNECT-FIX-SUMMARY.md  UNIFIED-VIEW-ARCHITECTURE.md  URL-MIGRATION-COMPLETE.md  WHITE-POPUP-DEBUG-GUIDE.md  WSL-WINDOWS-FIX-GUIDE.md  anti-cheat-system.js  auth-debug.html  auth-minimal.html  auth-wallet.js  auth.html  background.js  build-chrome-store-package.sh  config.js  content.js  devnet-transaction-handler.js  injected.js  manifest.json  (+17 more)
browser-extension-backup/: CONTENT-SCRIPT-FIX-GUIDE.md  REAL-BROWSER-DEBUG-GUIDE.md  REAL-WALLET-IMPLEMENTATION-GUIDE.md  WALLET-CONNECTION-FIX-GUIDE.md  background.js  behavior-analyzer.js  content-simple.js  content.js  manifest.json  pattern-recognizer.js  phantom-debug.html  popup-phase8-4.js  quality-validator.js  reward-system.js  styles.css
console/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
docs/: CDC-Fluid_Compute.md  Cahier des charges MVP — Lucid SDK + MCP (Passport 2e04b3b95ba280c68e36c490d0bffec6 (1).md  ERC8004_VS_LUCID_TECHNICAL_COMPARISON.md  Executive_verdict.md  FLUID-COMPUTE-ARCHITECTURE-V0.md  FLUID-COMPUTE-CANONICAL-HASH-SPEC.md  FLUID-COMPUTE-OUTPUT-REF-SPEC.md  FUTURE_FEATURES.md  LUCID-PASSPORT-8004-INTEGRATION-PLAN.md  LUCID-PASSPORTS-VS-8004-SOLANA-COMPARISON.md  LUCID_SDK_MCP_MVP_REVIEW.md  LUCID_VS_8004_INVESTOR_BRIEF.md  MVP_IMPLEMENTATION_TRACKER.md  OPENAPI_IMPLEMENTATION_TRACKER.md  PRODUCTION_READINESS_AUDIT.md  SDK-MCP-IMPLEMENTATION-STATUS-SOLANA-FOUNDATION.md  TESTING-GUIDE.md  competitive-advantage.md  privy-wallet-integration.md
frontend/: README.md  package-lock.json  package.json
infrastructure/: .env.example  CLOUD-MIGRATION-MANUAL-STEPS.md  SERVERLESS-SUPABASE-CONNECTION-GUIDE.md  diagnose-and-fix-db.sh  docker-compose.yml  endpoint_manager.py  fix-database-password.sh  test-nango-connection.js  test-supabase-connection.js
lucid-ext/: .gitignore  BUILD-STATUS.md  manifest.json  package-lock.json  package.json  vite.config.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
n8n/: .env.example  .gitignore  NETWORK-ACCESS-GUIDE.md  NEXT-STEPS.md  README.md  docker-compose.yml
offchain/: -d  .env.backup  .env.backup.20251110_122420  .env.backup.20251110_123850  .env.example  .gitignore  FLOWSPEC-DSL-GUIDE.md  N8N-ELASTICSEARCH-API-GUIDE.md  PROTOCOL-SDK-README.md  README.md  REAL-N8N-NODES-GUIDE.md  anchor-wallet.json  check-token-account.js  create-lucid-token.js  eslint.config.mjs  manifest.json  mcp-manifest.json  memory-wallet.json  openapi.yaml  organize-nodes.js  organized-nodes.json  package-lock.json  package.json  privy-auth-private-NEW.pem  privy-auth-private.pem  privy-auth-public-NEW.pem  privy-auth-public.pem  setup-lucid-mint.js  speakeasy-watch.sh  test-agent-orchestrator.js  test-agent-planner.js  test-batch.js  test-cloud-connection.js  test-enhanced-indexing.js  test-executor-router.js  test-flowspec-FINAL-WORKING.js  test-flowspec-examples.js  test-flowspec-real-results-FINAL.js  test-flowspec-real-results-WORKING.js  test-flowspec-verify-output.js  (+29 more)
programs/gas-utils/: Cargo.toml  keypair.json
programs/gas-utils/src/: lib.rs
programs/lucid-agent-wallet/: Cargo.toml  keypair.json
programs/lucid-agent-wallet/src/: lib.rs
programs/lucid-passports/: Cargo.toml
programs/lucid-passports/src/: lib.rs
programs/lucid-reputation/: Cargo.toml  keypair.json
programs/lucid-reputation/src/: lib.rs
programs/lucid-zkml-verifier/: Cargo.toml  keypair.json
programs/lucid-zkml-verifier/src/: lib.rs
programs/thought-epoch/: Cargo.toml
programs/thought-epoch/src/: lib.rs
programs/thought-epoch/test/: program_test.rs
schemas/: AgentMeta.schema.json  ComputeMeta.schema.json  ComputeOffer.schema.json  DatasetMeta.schema.json  JobResult.schema.json  ModelMeta.schema.json  OfferQuote.schema.json  Policy.schema.json  RunReceipt.schema.json  ToolMeta.schema.json  WorkerIdentity.schema.json
tests/: ONCHAIN-TESTING-COMPLETE.md  TESTING-GUIDE.md  commit-epoch.js  gas-utils.test.ts  lucid-agent-wallet.test.ts  lucid-passports.test.ts  lucid-reputation.test.ts  lucid-reputation.ts  lucid-zkml-verifier.test.ts  package-lock.json  package.json  test-create-agent.ts  test-devnet-program.sh  (+4 more)
(+1813 files in other folders)
