[package]
name = "gas-utils"
version = "0.1.0"
description = "Lucid L2™ Gas Utility Library for Cross-Program Invocation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gas_utils"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
# Pin transitive deps to pre-edition2024 versions (compatible with Solana BPF toolchain cargo 1.84)
blake3 = ">=1.3, <1.6"
constant_time_eq = ">=0.1, <0.4"

[dev-dependencies]
