[package]
name = "lucid-agent-wallet"
version = "0.1.0"
description = "Unified agent wallet for Lucid protocol — wallet, policy, splits, sessions, escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lucid_agent_wallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
# Pin transitive deps to pre-edition2024 versions (compatible with Solana BPF toolchain cargo 1.84)
blake3 = ">=1.3, <1.6"
constant_time_eq = ">=0.1, <0.4"
