[package]
name = "lucid-passports"
version = "0.1.0"
description = "Lucid Passports - On-chain registry for AI models, datasets, and licensing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lucid_passports"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
