[package]
name = "lucid-passports"
version = "0.1.0"
description = "Lucid Passports - On-chain registry for AI models, datasets, and licensing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lucid_passports"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
