[package]
name = "lucid-passports"
version = "0.1.0"
description = "Lucid Passports - On-chain registry for AI models, datasets, and licensing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lucid_passports"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"
# Pin transitive deps to pre-edition2024 versions (compatible with Solana BPF toolchain cargo 1.84)
blake3 = ">=1.3, <1.8"
constant_time_eq = ">=0.1, <0.4"
