[package]
name = "lucid-reputation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lucid_reputation"

[dependencies]
anchor-lang = "0.31.1"
# Pin transitive deps to pre-edition2024 versions (compatible with Solana BPF toolchain cargo 1.84)
blake3 = ">=1.3, <1.6"
constant_time_eq = ">=0.1, <0.4"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []
no-log-ix-name = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
