[package]
name    = "thought_epoch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "thought_epoch"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
# Pin transitive deps to pre-edition2024 versions (compatible with Solana BPF toolchain cargo 1.84)
blake3 = ">=1.3, <1.6"
constant_time_eq = ">=0.1, <0.4"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
cpi = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []
no-log-ix-name = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
